# caixa-bevy_trait_query

./: Cargo.build-spec.json  Cargo.toml  README.md  bevy_trait_query.caixa.lisp  flake.nix
.github/workflows/: ci.yml
bevy-trait-query/: Cargo.toml
bevy-trait-query-impl/: Cargo.toml
bevy-trait-query-impl/src/: lib.rs
bevy-trait-query/src/: lib.rs  tests.rs
bevy-trait-query/src/all/core/: fetch.rs  read.rs  write.rs
bevy-trait-query/src/all/impls/: all.rs
bevy-trait-query/src/internal/: dyn_constructor.rs  register_ext.rs  trait_registry.rs  trait_state.rs
bevy-trait-query/src/one/core/: change_detection.rs  fetch.rs
bevy-trait-query/src/one/impls/: one.rs  one_added.rs  one_changed.rs  with_one.rs  without_any.rs
nix/modules/: darwin.nix  home-manager.nix  nixos.nix
