[workspace]
members  = ["bevy-trait-query", "bevy-trait-query-impl"]
resolver = "3"

[workspace.package]
categories = ["game-development"]
edition    = "2024"
keywords   = ["bevy", "gamedev", "plugin", "query", "trait"]
license    = "MIT OR Apache-2.0"
repository = "https://github.com/JoJoJet/bevy-trait-query/"

[workspace.dependencies]
bevy_app = { default-features = false, version = "0.18.0" }
bevy_ecs = { default-features = false, version = "0.18.0" }
tracing  = { default-features = false, version = "0.1.41" }

# proc macro
bevy-trait-query-impl = { path = "./bevy-trait-query-impl", version = "0.18.0" }
proc-macro-crate      = { version = "3.4.0" }
proc-macro2           = { version = "1.0.103" }
quote                 = { version = "1.0.42" }
syn                   = { features = ["full"], version = "2.0.111" }

# dev deps
bevy      = { default-features = false, version = "0.18.0" }
criterion = { version = "0.8.1" }

# lints copied from bevy upstream
[workspace.lints.clippy]
doc_markdown                       = "warn"
manual_let_else                    = "warn"
match_same_arms                    = "warn"
needless_lifetimes                 = "allow"
nonstandard_macro_braces           = "warn"
print_stderr                       = "warn"
print_stdout                       = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else                     = "warn"
semicolon_if_nothing_returned      = "warn"
too_many_arguments                 = "allow"
type_complexity                    = "allow"
undocumented_unsafe_blocks         = "warn"
unwrap_or_default                  = "warn"

ptr_as_ptr         = "warn"
ptr_cast_constness = "warn"
ref_as_ptr         = "warn"

# see: https://github.com/bevyengine/bevy/pull/15375#issuecomment-2366966219
too_long_first_doc_paragraph = "allow"

alloc_instead_of_core = "warn"
std_instead_of_alloc  = "warn"
std_instead_of_core   = "warn"

allow_attributes                = "warn"
allow_attributes_without_reason = "warn"

[workspace.lints.rust]
missing_docs           = "warn"
unexpected_cfgs        = { check-cfg = ['cfg(docsrs_dep)'], level = "warn" }
unsafe_code            = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications  = "warn"
