[package]
categories  = { workspace = true }
description = "Procedural macro for `bevy-trait-query`"
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "bevy-trait-query-impl"
repository  = { workspace = true }
version     = "0.18.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = { workspace = true }
proc-macro2      = { workspace = true }
quote            = { workspace = true }
syn              = { features = ["full"], workspace = true }
